--- a/package.json
+++ b/package.json
@@ -38,6 +38,12 @@
     "afterSign": "internals/macos/notarize.js",
     "artifactName": "${os}-${productName}-${version}-${arch}.${ext}",
     "asar": true,
+    "protocols": {
+      "name": "eosio",
+      "schemes": [
+        "eosio"
+      ]
+    },
     "files": [
       "dist/",
       "node_modules/",
@@ -273,6 +279,7 @@
     "electron-context-menu": "^0.10.0",
     "electron-store": "^2.0.0",
     "electron-updater": "^2.21.10",
+    "eosio-uri": "0.0.3",
     "eosjs": "16.0.8",
     "eosjs2": "git://github.com/aaroncox/eosjs2",
     "history": "^4.7.2",
