--- a/package.json
+++ b/package.json
@@ -250,7 +250,7 @@
     "redux-logger": "^3.0.6",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.3",
-    "semantic-ui-react": "^0.81.1",
+    "semantic-ui-react": "^0.84.0",
     "sinon": "^5.1.0",
     "source-map-support": "^0.5.6",
     "spectron": "^3.8.0",
@@ -291,6 +291,7 @@
     "p-queue": "^3.0.0",
     "pretty-bytes": "^5.1.0",
     "react": "^16.4.0",
+    "react-blockies": "^1.4.0",
     "react-debounce-render": "^5.0.0",
     "react-dom": "^16.4.0",
     "react-hot-loader": "^4.3.0",
