--- a/package.json
+++ b/package.json
@@ -278,6 +278,7 @@
     "crypto-js": "^3.1.9-1",
     "decimal.js": "^10.0.1",
     "dot-prop-immutable": "^1.4.0",
+    "eitherx": "^1.0.2",
     "electron-context-menu": "^0.10.0",
     "electron-store": "^2.0.0",
     "electron-updater": "^2.21.10",
