chore: added tests for accounts actions

--- a/package.json
+++ b/package.json
@@ -218,12 +218,14 @@
     "flow-typed": "^2.4.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
+    "jest-fetch-mock": "^2.1.2",
     "minimist": "^1.2.0",
     "ncp": "^2.0.0",
     "node-sass": "^4.9.0",
     "npm-logical-tree": "^1.2.1",
     "react-test-renderer": "^16.4.0",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.3",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.3",
     "semantic-ui-react": "^0.84.0",
