--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "release": "npm run build && electron-builder -mwl",
     "start": "cross-env NODE_ENV=production electron ./app/",
     "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron --js-flags='--expose-gc' -r babel-register ./app/main/main.dev",
-    "start-renderer-dev": "cross-env NODE_ENV=development node --trace-warnings -r babel-register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config webpack.config.renderer.dev.js"
+    "start-renderer-dev": "cross-env NODE_ENV=development node --trace-warnings -r babel-register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config webpack.config.renderer.dev.js",
+    "test": "jest --runInBand"
   },
   "browserslist": [
     "> 1%",
