--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eos-voter",
   "productName": "eos-voter",
-  "version": "0.7.9-alpha.4",
+  "version": "0.7.9",
   "description": "",
   "main": "./main.prod.js",
   "author": {
