--- a/package.json
+++ b/package.json
@@ -187,7 +187,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
-    "babel-jest": "^23.0.1",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-dev-expression": "^0.2.1",
@@ -204,7 +204,7 @@
     "concurrently": "^3.5.1",
     "cross-env": "^5.1.6",
     "cross-spawn": "^6.0.5",
-    "css-loader": "^0.28.11",
+    "css-loader": "^3.0.0",
     "detect-port": "^1.2.3",
     "devtron": "^1.4.0",
     "electron": "^2.0.7",
@@ -236,7 +236,7 @@
     "flow-runtime": "^0.17.0",
     "flow-typed": "^2.4.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.1.0",
+    "jest": "^24.8.0",
     "minimist": "^1.2.0",
     "ncp": "^2.0.0",
     "node-sass": "^4.9.0",
@@ -250,13 +250,13 @@
     "source-map-support": "^0.5.6",
     "spectron": "^3.8.0",
     "style-loader": "^0.21.0",
-    "stylefmt": "^6.0.0",
+    "stylefmt": "6.0.3",
     "stylelint": "^9.2.1",
     "stylelint-config-standard": "^18.2.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.11.1",
-    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.0.2",
     "webpack-dev-server": "^3.1.14",
     "webpack-hot-middleware": "^2.22.2",
@@ -265,7 +265,7 @@
   },
   "dependencies": {
     "asn1-ber": "^1.0.9",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "bip32-path": "^0.4.2",
     "crypto-js": "^3.1.9-1",
     "decimal.js": "^10.0.1",
@@ -282,7 +282,7 @@
     "i18next": "^11.3.2",
     "i18next-electron-language-detector": "^0.0.10",
     "i18next-sprintf-postprocessor": "^0.2.2",
-    "i18next-sync-fs-backend": "^1.1.0",
+    "i18next-sync-fs-backend": "^1.1.1",
     "p-queue": "^3.0.0",
     "pretty-bytes": "^5.1.0",
     "react": "^16.4.0",
