--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,12 @@
 version: 2
 jobs:
   build:
+
+    branches:
+      only:
+        - anchor
+        - /v*/
+
     docker:
       - image: circleci/node:8.16
 
