--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,14 @@
 version: 2
 jobs:
-  build:
-
-    branches:
-      only:
-        - anchor
-        - /v*/
-
+  node8:
     docker:
-      - image: circleci/node:8.16
-
-    working_directory: ~/repo
-
+      - image: node:8
     steps:
       - checkout
-
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            - v1-dependencies-
-
-      - run: npm install
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-
-      - run: npm run test
+      - run: npm ci
+      - run: npm test
+workflows:
+  version: 2
+  build:
+    jobs:
+      - node8
