--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ jobs:
     steps:
       - checkout
       - run: npm ci
+      - run: cd app && npm ci
       - run: npm test
 workflows:
   version: 2
