--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     docker:
       - image: node:8
     steps:
+      - run: apt-get install build-essential libudev-dev
       - checkout
       - run: npm ci
       - run: cd app && npm ci
