Add node-notifier and humanize-duration

--- a/package.json
+++ b/package.json
@@ -270,11 +270,13 @@
     "eosjs": "16.0.8",
     "eosjs2": "git://github.com/aaroncox/eosjs2",
     "history": "^4.7.2",
+    "humanize-duration": "^3.20.1",
     "i": "^0.3.6",
     "i18next": "^11.3.2",
     "i18next-electron-language-detector": "^0.0.10",
     "i18next-sprintf-postprocessor": "^0.2.2",
     "i18next-sync-fs-backend": "^1.1.1",
+    "node-notifier": "^5.4.3",
     "p-queue": "^3.0.0",
     "pretty-bytes": "^5.1.0",
     "react": "^16.4.0",
