--- a/package.json
+++ b/package.json
@@ -267,6 +267,7 @@
     "electron-updater": "^2.21.10",
     "eosjs": "16.0.8",
     "eosjs2": "git://github.com/aaroncox/eosjs2",
+    "git-revision-webpack-plugin": "^3.0.4",
     "history": "^4.7.2",
     "i": "^0.3.6",
     "i18next": "^11.3.2",
