--- a/package.json
+++ b/package.json
@@ -195,7 +195,7 @@
     "css-loader": "^3.0.0",
     "detect-port": "^1.2.3",
     "devtron": "^1.4.0",
-    "electron": "^2.0.7",
+    "electron": "^2.0.18",
     "electron-builder": "22.1.0",
     "electron-debug": "^2.0.0",
     "electron-devtools-installer": "^2.2.4",
@@ -279,6 +279,7 @@
     "node-notifier": "^5.4.3",
     "p-queue": "^3.0.0",
     "pretty-bytes": "^5.1.0",
+    "qrcode": "^1.4.4",
     "react": "^16.4.0",
     "react-blockies": "^1.4.0",
     "react-debounce-render": "^5.0.0",
