--- a/package.json
+++ b/package.json
@@ -256,6 +256,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.7.0",
     "asn1-ber": "^1.0.9",
     "axios": "^0.19.0",
     "bip32-path": "^0.4.2",
@@ -266,9 +267,10 @@
     "electron-context-menu": "^0.10.0",
     "electron-store": "^2.0.0",
     "electron-updater": "^2.21.10",
-    "eosio-signing-request": "https://github.com/greymass/eosio-signing-transport#feature/id-request",
+    "eosio-signing-request": "^1.0.0",
     "eosjs": "16.0.8",
     "eosjs2": "git://github.com/aaroncox/eosjs2",
+    "fast-sha256": "^1.1.1",
     "history": "^4.7.2",
     "humanize-duration": "^3.20.1",
     "i": "^0.3.6",
@@ -300,7 +302,8 @@
     "redux-electron-store": "^0.6.2",
     "redux-persist": "^5.10.0",
     "redux-persist-electron-storage": "^1.1.2",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.3"
   },
   "devEngines": {
     "node": ">=7.x",
