--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
       "oneClick": false,
       "createDesktopShortcut": "always",
       "createStartMenuShortcut": true,
-      "shortcutName": "anchor"
+      "shortcutName": "Anchor",
+      "include": "build/installer.nsh"
     },
     "linux": {
       "category": "Network",
