Removed beta tag

--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "anchor-beta",
-  "productName": "Anchor-BETA",
+  "name": "anchor",
+  "productName": "Anchor",
   "version": "1.0.0",
   "description": "An EOSIO Light Wallet with simple tools for basic activities and advanced tools for power users.",
   "main": "./main.prod.js",
