--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "anchor",
+  "name": "anchor-beta",
   "productName": "Anchor",
-  "version": "1.0.0",
+  "version": "1.0.0-rc9",
   "description": "An EOSIO Light Wallet with simple tools for basic activities and advanced tools for power users.",
   "scripts": {
     "build": "concurrently \"npm run build-main\" \"npm run build-renderer\"",
